# bench_runner

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPER.md  PROVISIONING.md  README.md  lint.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  pypi.yml
bench_runner/: __main__.py  bases.py  benchmark_definitions.py  config.py  flags.py  gh.py  git.py  hpt.py  plot.py  profiling_plot.py  result.py  runners.py  summarize_stats.py  table.py  util.py
bench_runner/scripts/: backfill.py  benchmark_workflow.py  bisect.py  compare.py  compile.py  find_failures.py  generate_results.py  get_merge_base.py  install.py  notify.py  profiling_plot.py  purge.py  remove_benchmark.py  run_benchmarks.py  should_run.py  synthesize_loops_file.py  workflow.py
bench_runner/templates/: README.md  RESULTS.md  _benchmark.src.yml  _compile.src.yml  _find_failures.src.yml  _generate.src.yml  _notify.src.yml  _publish.src.yml  _pystats.src.yml  _weekly.src.yml  bases.txt  bench_runner.toml  benchmark.src.yml  ci.src.yml  env.yml  runners.ini  static.src.yml  workflow_bootstrap.py  workflow_bootstrap.src.py
bench_runner/templates/pages/: bench_display.py  index.html  main.js  worker.js
tests/: _make_test_data.py  conftest.py  test_bases.py  test_compare.py  test_config.py  test_flags.py  test_generate_results.py  test_get_merge_base.py  test_gh.py  test_notify.py  test_result.py  test_run_benchmarks.py  test_synthesize_loops_file.py  test_table.py  test_workflow.py
tests/data/: bench_runner.toml  plotconfig.json  runners.ini
tests/data/results/bm-20220323-3.10.4-9d38120/: bm-20220323-linux-x86_64-python-main-3.10.4-9d38120.json
tests/data/results/bm-20220601-3.11.0b3-eb0004c/: bm-20220601-linux-x86_64-python-main-3.11.0b3-eb0004c.json
