[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bench_runner"
authors = [
    {name = "Michael Droettboom", email = "mdroettboom@microsoft.com"},
]
description = "Faster CPython's benchmarking runner utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib==3.9.0",
    "pyperf==2.8.0",
    "rich==13.9.3",
    "rich-argparse==1.5.2",
    "ruamel.yaml==0.18.6",
    "scour==0.38.2",
    "tomli==2.0.1; python_version < '3.11'",
    "wheel",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "black==24.10.0",
    "filelock==3.16.1",
    "flake8==7.1.1",
    "pyright==1.1.385",
    "pytest==8.3.3",
    "pytest-xdist==3.6.1",
]

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
bench_runner = ["templates/*"]
